--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
 <section id="main-body-info">
     <p id="main-info">main info</p>
     <p id="about-me"><strong>about me</strong></p>
+    <div class="container">
+        <p id="i-am-2">I'm Rishav Saha and <span class="changing"><i class="about-me-part-2">a web developer</i><i class="cursor">|</i></span></p>
+        <br>
+        <p id="bio">Hi! My name is Rishav Saha and I am currently a 2nd year B.Tech student pursuing my engineering in Computer 
+                    Science. I am a Web Developer, a Cyber Security student and a ML Enthusiast and I'm very passionate and 
+                    dedicated to my work.I have acquired the skills and knowledge necessary to make your project a success.</p>
+        <div id="inner-container">
+                <div class="bio-data"><strong id="birtday" style="text-transform: uppercase;color:white;margin-right:30px">Birthday:</strong> 09.07.2002</div>
+                <div class="bio-data"><strong id="location" style="text-transform: uppercase;color:white;margin-right:25px">Location:</strong> Kolkata,WestBengal,India</div>
+                <div class="bio-data"><strong id="study" style="text-transform: uppercase;color:white;margin-right:53px">Study:</strong> University of Engineering and Management, Kolkata</div>
+                <div class="bio-data"><strong id="mail" style="text-transform: uppercase;color:white;margin-right:65px">Mail:</strong> rsaha0907@gmail.com</div>
+                <div class="bio-data"><strong id="age" style="text-transform: uppercase;color:white;margin-right:72px">Age:</strong> 18</div>
+                <div class="bio-data"><strong id="interest" style="text-transform: uppercase;color:white;margin-right:31px">Interest:</strong> Travelling</div>
+                <div class="bio-data"><strong id="degree" style="text-transform: uppercase;color:white;margin-right:42px">Degree:</strong> B.Tech</div>
+                <div class="bio-data"><strong id="phone-number" style="text-transform: uppercase;color:white;margin-right:17px">Phone No:</strong> 8017544231</div>
+        </div>
+        <a href="" id="resume">Download resume</a>
+    </div>
 </section>
 <script src="assets/js/style.js" type="text/javascript"></script>
 </body>
