--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-list">
                 <a href="#" class="items-link"></i><li class="items home">Home</li></a>
                 <a href="#" class="items-link"><li class="items about">About</li></a>
-                <a href="#" class="items-link"><li class="items service">Service</li></a>
+                <a href="#" class="items-link"><li class="items service">Skills</li></a>
                 <a href="#" class="items-link"><li class="items portfolio">portfolio</li></a>
             </ul>
             <div class="contacts">
@@ -28,10 +28,10 @@
 </section>
 <div class="channel">
     <ul class="nav-list-second">
-        <a href="#" class="items-link-sec"></i><li class="items2">Home</li></a>
-        <a href="#" class="items-link-sec"><li class="items2">About</li></a>
-        <a href="#" class="items-link-sec"><li class="items2">Service</li></a>
-        <a href="#" class="items-link-sec"><li class="items2">portfolio</li></a>
+        <a href="#" class="items-link-sec"></i><li class="items2 home2">Home</li></a>
+        <a href="#" class="items-link-sec"><li class="items2 about2">About</li></a>
+        <a href="#" class="items-link-sec"><li class="items2 skills2">Skills</li></a>
+        <a href="#" class="items-link-sec"><li class="items2 portfolio2">portfolio</li></a>
     </ul>
     <div class="contacts-2">
         <a href="https://www.facebook.com/profile.php?id=100013103286084" class="contact-items"><i class="fab fa-facebook"></i></a>
@@ -51,11 +51,12 @@
             <span class="changing"><i class="about-me-part">a web developer</i><i class="cursor">|</i></span>
         </h2>
     </div>
+
     
 </section>
 <div class="menu">
     <i class="fas fa-bars"></i>
-    </div>
+</div>
 <section id="main-body-info">
     <p id="main-info">main info</p>
     <p id="about-me"><strong>about me</strong></p>
@@ -76,6 +77,73 @@
                 <div class="bio-data"><strong id="phone-number" style="text-transform: uppercase;color:white;margin-right:17px">Phone No:</strong> 8017544231</div>
         </div>
         <a href="" id="resume">Download resume</a>
+    </div>
+</section>
+<section id="service">
+    <p id="what-i-do">What I do</p>
+    <p id="skills-and-services"><strong>Skills and Services</strong></p>
+    <div class="container-fluid">
+        <div class="card">
+            <i class="fas fa-code skill-icon"></i>
+            <span class="skill-name"><strong>Web Development</strong></span>
+            <p class="skill-description">I am a web developer with an year of experience and googd amount of skills. I use technologies like html,css,sass,javascript,
+                php,nodeJS,bootstrap etc.
+            </p>
+        </div>
+        <div class="card">
+            <i class="fab fa-android skill-icon"></i>
+            <span class="skill-name"><strong>App Development</strong></span>
+            <p class="skill-description">I am an android App Developer. I am learning skills everyday to make my projects a great success. I use kotlin and react 
+                native for app development.
+            </p>
+        </div>
+        <div class="card">
+            <i class="fas fa-user-secret skill-icon"></i>
+            <span class="skill-name"><strong>Ethical Hacking</strong></span>
+            <p class="skill-description">I am also an ethical hacker. From web attacks like LFI,RCE,SQLI,XSS etc to linux privilege escalations , I am also intere-
+                sted in digital forensics.
+            </p>
+        </div>
+        <div class="card">
+            <i class="fas fa-file-code skill-icon"></i>
+            <span class="skill-name"><strong>Programming</strong></span>
+            <p class="skill-description">I am also a programmer . Love to code in Python and javascript. Not a competitive coder, I am interested in making projects 
+                and participating in hackathons</p>
+        </div>
+        <div class="card">
+            <i class="fab fa-linux skill-icon"></i>
+            <span class="skill-name"><strong>linux administration</strong></span>
+            <p class="skill-description">I have a pretty good experience with the linux operating system. As a developer I mostly use linux as my primary OS. I am 
+                flexible with almost all linux distros.
+            </p>
+        </div>
+        <div class="card">
+            <i class="fas fa-cloud skill-icon"></i>
+            <span class="skill-name"><strong>cloud computing</strong></span>
+            <p class="skill-description">I am also interested in cloud computing. For now I am only experienced with Azure but soon I will be learning AWS and other 
+                cloud platforms</p>
+        </div>
+    </div>
+</section>
+<section id="portfolio">
+    <p id="my-works">my works</p>
+    <p id="my-portfolio"><strong>portfolio</strong></p>
+    <div class="container-fluid">
+        <div class="card1">
+            <span class="project-name">Radio Frequency Hijacker</span>
+            <img src="/assets/img/project1.jpg" class="project-image">
+            <a href="https://github.com/Rishav0907/PiFmRds" class="code">github link</a>
+        </div>
+        <div class="card1">
+            <span class="project-name">Yelpcamp Ecommerce website</span>
+            <img src="/assets/img/project2.png" class="project-image">
+            <a href="https://github.com/Rishav0907/yelpcamp" class="code">github link</a>
+        </div>
+        <div class="card1">
+            <span class="project-name">Python virtual assistant</span>
+            <img src="/assets/img/project3.png" class="project-image">
+            <a href="https://github.com/Rishav0907/virtualAssistant" class="code">github link</a>
+        </div>
     </div>
 </section>
 <script src="assets/js/style.js" type="text/javascript"></script>
