--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="bio-data"><strong id="degree" style="text-transform: uppercase;color:white;margin-right:42px">Degree:</strong> B.Tech</div>
                 <div class="bio-data"><strong id="phone-number" style="text-transform: uppercase;color:white;margin-right:17px">Phone No:</strong> 8017544231</div>
         </div>
-        <a href="" id="resume">Download resume</a>
+        <a href="/assets/pdf/resume.pdf" id="resume">Download resume</a>
     </div>
 </section>
 <section id="service">
@@ -86,7 +86,7 @@
         <div class="card">
             <i class="fas fa-code skill-icon"></i>
             <span class="skill-name"><strong>Web Development</strong></span>
-            <p class="skill-description">I am a web developer with an year of experience and googd amount of skills. I use technologies like html,css,sass,javascript,
+            <p class="skill-description">I am a web developer with an year of experience and good amount of skills. I use technologies like html,css,sass,javascript,
                 php,nodeJS,bootstrap etc.
             </p>
         </div>
